fix for restapi